# seedling_bug

./: Cargo.toml
midix_soundfont_synth/: Cargo.toml
midix_soundfont_synth/src/: lib.rs  utils.rs
midix_soundfont_synth/src/reader/: binary.rs  counter.rs  mod.rs
midix_soundfont_synth/src/soundfont/: error.rs  info.rs  mod.rs  parameters.rs  sample_header.rs  sampledata.rs  version.rs
midix_soundfont_synth/src/soundfont/generator/: mod.rs  type.rs
midix_soundfont_synth/src/soundfont/instrument/: info.rs  mod.rs  region.rs
midix_soundfont_synth/src/soundfont/preset/: info.rs  mod.rs  region.rs
midix_soundfont_synth/src/soundfont/zone/: info.rs  mod.rs
midix_soundfont_synth/src/synthesizer/: channel.rs  chorus.rs  error.rs  mod.rs  reverb.rs  settings.rs
midix_soundfont_synth/src/synthesizer/voice/: bi_quad_filter.rs  mod.rs  oscillator.rs
midix_soundfont_synth/src/synthesizer/voice/envelope/: common.rs  mod.rs  modulation.rs  volume.rs
midix_soundfont_synth/src/synthesizer/voice/region/: lfo.rs  mod.rs  pair.rs
src/: main.rs  player.rs  soundfont.rs
